
[TestChanges_MultipleChanges/multiple_fields_changed - 1]
# Test: multiple_fields_changed

## Old Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    post:
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                name:
                  type: string
                email:
                  type: string
                age:
                  type: integer
      responses:
        '200':
          description: Success
```

## New Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    post:
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                fullName:
                  type: string
                emailAddress:
                  type: string
                age:
                  type: string
                dateOfBirth:
                  type: string
      responses:
        '200':
          description: Success
```

## Changes Detected:
* sdk.createUser(): **Changed** request [breaking]

---

[TestChanges_MultipleChanges/both_request_and_response_changed - 1]
# Test: both_request_and_response_changed

## Old Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    post:
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                name:
                  type: string
      responses:
        '200':
          description: Success
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: integer
```

## New Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    post:
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                name:
                  type: string
                email:
                  type: string
      responses:
        '200':
          description: Success
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: string
                  createdAt:
                    type: string
```

## Changes Detected:
* sdk.createUser(): **Added** request.email, **Changed** response [breaking]

---
